          conformance test results into doxygen-generated docs.

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/nodeptr.cpp,
          src/openvrml/OpenVRML/vrml97node.cpp:  Doc-comment love.

        * openvrml.spec.in:  Removed reference to doc/conformance.html.

2002-12-17  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Take out all Makefile.vc6 from ide-projects/Windows/VisualC6/*
          and keep these in respective source directory.

        * INSTALL-MSVC6.txt : Installation note for MSVC6.

        * ide-projects/Windows/VisualC6/Install: remove.

        * Update all Makefile.vc6 and *.dsp.

        * Apply patches #653113 and #653128.

2002-12-16  Thomas Flynn  <tflynn@users.sourceforge.net>

        * doc/conformance.html: Update conformance results.

2002-12-16  Braden McDaniel  <braden@endoframe.com>

        * doc/doxygen-footer, doc/doxygen-header, doc/openvrml.css:
          Documentation enhancements.

        * src/openvrml/OpenVRML/vrml97node.cpp:  const fixes.

        * src/openvrml/OpenVRML/vrml97node.cpp:  More const fixes.

        * src/openvrml/OpenVRML/VrmlRenderContext.cpp,
          src/openvrml/OpenVRML/VrmlRenderContext.h,
          src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Changed Node::render to
          take a Viewer & instead of a Viewer *.

        * src/openvrml/OpenVRML/browser.cpp:  Added doc-comments for
          constants pi and friends.

        * src/openvrml/OpenVRML/Audio.cpp,
          src/openvrml/OpenVRML/Audio.h:  Reformatted comments as doc-
          comments.

        * src/openvrml/OpenVRML/field.cpp:  Doc-comment fixes.

        * src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/vrml97node.cpp,